--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>GUNTANK</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="text/javascript" src="/webiopi.js"></script>
+  <script type="text/javascript">
+    webiopi().ready(function(){
+      var LEFT_FORWARD_BTN = webiopi().createButton("Left Forward", "Left Forward",
+        function(){webiopi().callMacro("leftForwad");},
+        function(){webiopi().callMacro("leftForwadEnd");}
+      );
+
+    });
+  </script>
 </head>
 <body>
+  <table border="0" cellspacing="0" align="center">
+    <tr>
+      <td colspan="3">
+        <img src="http://guntank.local.nevernothing.jp:8010/?action=stream" width="400" border="0" align="center"/>
+      </td>
+    </tr>
+    <tr>
+      <td><div id="LeftForwardBtn" align="center">左前</div></td>
+      <td><div id="ForwardBtn" align="center">前進</div></td>
+      <td><div id="RightForwardBtn" align="center">右前</div></td>
+    </tr>
+    <tr>
+      <td><div id="LeftTurnBtn" align="center">左回転</div></td>
+      <td><div id="StopBtn" align="center">停止</div></td>
+      <td><div id="RightTurnBtn" align="center">右回転</div></td>
+    </tr>
+    <tr>
+      <td><div id="LeftBackBtn" align="center">左後</div></td>
+      <td><div id="BackBtn" align="center">後退</div></td>
+      <td><div id="RightBackBtn" align="center">右後</div></td>
+    </tr>
+  </table>
 </body>
 </html>
