--- a/html/index.html
+++ b/html/index.html
@@ -55,35 +55,37 @@
     });
   </script>
   <style type="text/css">
-    font-size:3em;
-    width:240px;
-    height:100px;
-    margin-left:10px;
-    color:#0000FF;
-    border:none;
+    button {
+      font-size:3em;
+      width:240px;
+      height:110px;
+      margin-left:10px;
+      color:#0000FF;
+      border:none;
+    }
   </style>
 </head>
 <body>
   <table border="0" cellspacing="0" align="center">
     <tr>
-      <td colspan="3">
+      <td colspan="3" align="center">
         <img src="http://guntank.local.nevernothing.jp:8010/?action=stream" width="400" border="0" align="center"/>
       </td>
     </tr>
     <tr>
-      <td><div id="LeftForwardBtn" align="center">左前</div></td>
-      <td><div id="ForwardBtn" align="center">前進</div></td>
-      <td><div id="RightForwardBtn" align="center">右前</div></td>
+      <td><div id="LeftForwardBtn" align="center"></div></td>
+      <td><div id="ForwardBtn" align="center"></div></td>
+      <td><div id="RightForwardBtn" align="center"></div></td>
     </tr>
     <tr>
-      <td><div id="LeftTurnBtn" align="center">左回転</div></td>
-      <td><div id="StopBtn" align="center">停止</div></td>
-      <td><div id="RightTurnBtn" align="center">右回転</div></td>
+      <td><div id="LeftTurnBtn" align="center"></div></td>
+      <td><div id="StopBtn" align="center"></div></td>
+      <td><div id="RightTurnBtn" align="center"></div></td>
     </tr>
     <tr>
-      <td><div id="LeftBackBtn" align="center">左後</div></td>
-      <td><div id="BackBtn" align="center">後退</div></td>
-      <td><div id="RightBackBtn" align="center">右後</div></td>
+      <td><div id="LeftBackBtn" align="center"></div></td>
+      <td><div id="BackBtn" align="center"></div></td>
+      <td><div id="RightBackBtn" align="center"></div></td>
     </tr>
   </table>
 </body>
