--- a/html/index.html
+++ b/html/index.html
@@ -9,39 +9,39 @@
     webiopi().ready(function(){
       var LEFT_FORWARD_BTN = webiopi().createButton("Left Forward", "Left Forward",
         function(){webiopi().callMacro("leftForwad");},
-        function(){webiopi().callMacro("leftForwadEnd");}
+        function(){webiopi().callMacro("atop");}
       );
       var FORWARD_BTN = webiopi().createButton("Forward", "Forward",
         function(){webiopi().callMacro("forwad");},
-        function(){webiopi().callMacro("forwadEnd");}
+        function(){webiopi().callMacro("stop");}
       );
       var RIGHT_FORWARD_BTN = webiopi().createButton("Right Forward", "Right Forward",
         function(){webiopi().callMacro("rightForwad");},
-        function(){webiopi().callMacro("rightForwadEnd");}
+        function(){webiopi().callMacro("stop");}
       );
       var LEFT_TURN_BTN = webiopi().createButton("Left Turn", "Left Turn",
         function(){webiopi().callMacro("leftTurn");},
-        function(){webiopi().callMacro("leftTurnEnd");}
+        function(){webiopi().callMacro("stop");}
       );
       var STOP_BTN = webiopi().createButton("Stop", "Stop",
         function(){webiopi().callMacro("stop");},
-        function(){webiopi().callMacro("stopEnd");}
+        function(){webiopi().callMacro("stop");}
       );
       var RIGHT_TURN_BTN = webiopi().createButton("Right Turn", "Right Turn",
         function(){webiopi().callMacro("rightTurn");},
-        function(){webiopi().callMacro("rightTurnEnd");}
+        function(){webiopi().callMacro("stop");}
       );
       var LEFT_BACK_BTN = webiopi().createButton("Left Back", "Left Back",
         function(){webiopi().callMacro("leftBack");},
-        function(){webiopi().callMacro("leftBackEnd");}
+        function(){webiopi().callMacro("stop");}
       );
       var BACK_BTN = webiopi().createButton("Back", "Back",
         function(){webiopi().callMacro("back");},
-        function(){webiopi().callMacro("backEnd");}
+        function(){webiopi().callMacro("stop");}
       );
       var RIGHT_BACK_BTN = webiopi().createButton("Right Back", "Right Back",
         function(){webiopi().callMacro("rightBack");},
-        function(){webiopi().callMacro("rightBackEnd");}
+        function(){webiopi().callMacro("stop");}
       );
       $("#LeftForwardBtn").append(LEFT_FORWARD_BTN);
       $("#ForwardBtn").append(FORWARD_BTN);
