--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     webiopi().ready(function(){
       var LEFT_FORWARD_BTN = webiopi().createButton("Left Forward", "Left Forward",
         function(){webiopi().callMacro("leftForwad");},
-        function(){webiopi().callMacro("atop");}
+        function(){webiopi().callMacro("stop");}
       );
       var FORWARD_BTN = webiopi().createButton("Forward", "Forward",
         function(){webiopi().callMacro("forwad");},
